--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <!DOCTYPE html>
-
+<!-- I did the frontend using React -->
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
